添加账号信息配置

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   ],
   "node-red": {
     "nodes": {
-      "bizwechat": "bizwechat.js"
+      "bizwechat": "bizwechat.js",
+      "bizwechat-configurator": "bizwechat-configurator.js"
+
     }
   },
   "author": "FlashSoft",
