--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-bizwechat",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "企业微信消息接收转发至NodeRed",
   "main": "index.js",
   "repository": {
@@ -11,13 +11,13 @@
     "node-red",
     "nodered",
     "NodeRed",
-    "WeChat"
+    "WeChat",
+    "BizWeChat"
   ],
   "node-red": {
     "nodes": {
       "bizwechat": "bizwechat.js",
       "bizwechat-configurator": "bizwechat-configurator.js"
-
     }
   },
   "author": "FlashSoft",
@@ -27,8 +27,15 @@
   },
   "homepage": "https://github.com/FlashSoft/node-red-contrib-bizwechat#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "wechat-crypto": "0.0.2",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^5.2.2"
   }
 }
