--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
   "homepage": "https://github.com/FlashSoft/node-red-contrib-bizwechat#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "marked": "^0.6.2",
-    "mkdirs": "0.0.2",
-    "mustache": "^3.0.1",
+    "mkdirp": "^0.5.1",
     "wechat-crypto": "0.0.2",
     "xml2js": "^0.4.19"
   },
