--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "marked": "^0.6.2",
     "mkdirp": "^0.5.1",
     "wechat-crypto": "0.0.2",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "form-data": "^2.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
